--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto": "^1.0.1",
     "daimo": "^1.0.1",
     "prisma": "^6.17.1",
     "razorpay": "^2.9.6",
