--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.90.5",
@@ -35,6 +36,7 @@
     "crypto": "^1.0.1",
     "daimo": "^1.0.1",
     "prisma": "^6.17.1",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
